--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "ai-psych-backend",
   "version": "1.0.0",
+  "description": "Backend for AI Psychologist app",
+  "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "openai": "^4.20.1"
+  "engines": {
+    "node": ">=18"
   },
-  "type": "module"
+  "dependencies": {
+    "express": "^4.18.2",
+    "dotenv": "^16.3.1",
+    "openai": "^4.10.0",
+    "cors": "^2.8.5"
+  }
 }
