--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "express": "^4.18.2",
     "dotenv": "^16.3.1",
     "openai": "^5.0.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
     "mongoose": "^7.3.1"
   }
 }
