--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "openai": "^5.0.0",
     "cors": "^2.8.5",
-    "mongoose": "^7.3.1"
+    "mongoose": "^7.3.1",
+    "jsonwebtoken": "^9.0.0"
   }
 }
